--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "js-cookie": "^3.0.5"
+    "axios": "^1.10.0",
+    "js-cookie": "^3.0.5",
+    "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.x.x",
@@ -20,8 +22,8 @@
     "@testing-library/jest-dom": "^6.x.x",
     "@testing-library/react": "^16.x.x",
     "babel-jest": "^29.x.x",
-    "jest": "^29.x.x",
-    "jest-environment-jsdom": "^29.x.x",
-    "identity-obj-proxy": "^3.0.0"
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.0.2"
   }
 }
