--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,11 +19,13 @@
   "devDependencies": {
     "@babel/preset-env": "^7.x.x",
     "@babel/preset-react": "^7.x.x",
-    "@testing-library/jest-dom": "^6.x.x",
-    "@testing-library/react": "^16.x.x",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "babel-jest": "^29.x.x",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^30.0.2"
+    "jest-environment-jsdom": "^30.0.2",
+    "jsdom": "^26.1.0"
   }
 }
